# notion-meeting-sync

./: .env.example  .gitignore  README.md  com.seokmogu.notion-meeting-sync.plist  pyproject.toml
.sisyphus/evidence/: task-1-config-load.txt  task-1-config-missing-token.txt  task-2-converter-omitted.txt  task-2-converter-tests.txt
.sisyphus/notepads/notion-meeting-sync/: decisions.md  learnings.md
scripts/: setup.sh
src/notion_meeting_sync/: __init__.py  __main__.py  config.py  converter.py  fetcher.py  orchestrator.py  poller.py  publisher.py  state.py  visualizer.py  webhook.py
tests/: test_config.py  test_converter.py  test_fetcher.py  test_orchestrator.py  test_poller.py  test_publisher.py  test_state.py  test_webhook.py
