[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notion-meeting-sync"
version = "0.1.0"
description = "Sync Notion meeting records with git repository"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "notion-native-toolkit @ git+https://github.com/seokmogu/notion-native-toolkit.git",
  "pydantic-settings>=2.0,<3",
  "fastapi>=0.100,<1",
  "uvicorn[standard]>=0.24,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0,<8",
  "pytest-asyncio>=0.21,<1",
  "httpx>=0.27,<1",
  "ruff>=0.3,<1",
  "basedpyright>=1.0,<2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "PTH", "G004"]
ignore = ["ANN101", "ANN102"]

[tool.basedpyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
